--- a/app.json
+++ b/app.json
@@ -5,6 +5,9 @@
   "env": {
     "test": {
       "required": true
+    },
+    "TEST_TOKEN": {
+      "required": true
     }
   },
   "formation": {
