--- a/app.json
+++ b/app.json
@@ -3,10 +3,7 @@
   "scripts": {
   },
   "env": {
-    "test": {
-      "required": true
-    },
-    "TEST_TOKEN": {
+    "GITHUB_TOKEN": {
       "required": true
     }
   },
