--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-nodemon": "^2.2.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/gulp/bin/gulp.js production"
   },
   "author": "daniel.chmiel@outlook.com",
   "license": "ISC"
