--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.4",
-    "run-sequence": "^2.2.1"
-  },
-  "devDependencies": {
+    "run-sequence": "^2.2.1",
     "gulp-nodemon": "^2.2.1"
   },
   "scripts": {
