--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/gulp/bin/gulp.js production",
-    "dev": "node app.js",
+    "start": "node app.js",
+    "dev": "./node_modules/gulp/bin/gulp.js production",
     "heroku-prebuild": "./node_modules/gulp/bin/gulp.js build"
   },
   "author": "daniel.chmiel@outlook.com",
