--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.24.7",
     "del": "^3.0.0",
     "express": "^4.16.2",
     "gulp": "^3.9.1",
@@ -19,8 +19,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
-    "gulp-run": "^1.7.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.1",
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.4",
@@ -29,7 +28,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "./node_modules/gulp/bin/gulp.js production",
+    "dev": "./node_modules/gulp/bin/gulp.js",
     "heroku-prebuild": "./node_modules/gulp/bin/gulp.js build"
   },
   "author": "daniel.chmiel@outlook.com",
